# mexca

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .gitmodules  .mlc-config.json  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  NOTICE  README.dev.md  README.md  audio_text_integration.ipynb  compute_confidence.ipynb  demo.ipynb  demo_output  next_steps.md  project_setup.md  pyproject.toml  pyvenv.cfg  requirements.txt  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  docker.yml  docker_release.yml  documentation.yml  markdown-link-check.yml  next_steps.yml  recipes.yml  release.yml  sonarcloud.yml
dianna-demo/: analyze_performance.ipynb  mexca_dianna_test.ipynb  test_mediapipe.py
dianna-demo/data/: performance_metrics_20241024_cpu_n1.csv  performance_metrics_20241024_cpu_n3.csv  performance_metrics_20241024_gpu_n1.csv  performance_metrics_20241024_gpu_n3.csv
docker/: download_models.py
docker/audio-transcriber/: Dockerfile
docker/face-extractor/: Dockerfile
docker/sentiment-extractor/: Dockerfile
docker/speaker-identifier/: Dockerfile
docker/voice-extractor/: Dockerfile
docs/: Makefile  command_line.rst  components.rst  conf.py  current_status.rst  docker.rst  features.rst  getting_started.rst  gpu.rst  index.rst  installation.rst  installation_details.rst  introduction.rst  logging.rst  make.bat  output.rst  quick_installation.rst
examples/: demo.ipynb  demo_output.pkl  example_custom_pipeline_components.ipynb  example_emotion_feature_extraction.ipynb  logging.yml  test.py
mexca/: __init__.py  container.py  data.py  pipeline.py  postprocessing.py  utils.py  video.py
mexca/audio/: __init__.py  dummy.py  extraction.py  features.py  identification.py  integration.py  pyannote_audio.py  speaker_id.py
mexca/core/: exceptions.py  output.py  pipeline.py  preprocessing.py  utils.py
mexca/text/: __init__.py  sentiment.py  transcription.py
mexca/video/: __init__.py  anfl.py  annotation.py  extraction.py  face_id.py  helper_classes.py  mefarg.py  mefl.py
recipes/: logging.yml  recipe_postprocess_features.py  recipe_standard_pipeline.py  recipe_visualize_results.py
tests/: conftest.py  create_face_id_reference.py  test_audio_extraction.py  test_audio_features.py  test_audio_identification.py  test_audio_text_integration.py  test_audio_transcription.py  test_container.py  test_data.py  test_dummy.py  test_extraction.py  test_face_id.py  test_pipeline.py  test_postprocessing.py  test_speaker_id.py  test_text_sentiment.py  test_text_transcription.py  test_utils.py  test_video.py  test_video_anfl.py  test_video_extraction.py  test_video_helper_classes.py  test_video_mefarg.py  test_video_mefl.py
tests/audio/: test_audio_extraction.py  test_audio_identification.py  test_audio_integration.py  test_extraction.py  test_features.py  test_integration.py  test_speaker_id.py
tests/core/: test_output.py  test_pipeline.py  test_preprocessing.py  test_utils.py
tests/reference_files/: VideoAnnotation_schema.json  VoiceFeaturesConfig_schema.json  annotation_eng_5_seconds.json  annotation_video_audio_5_seconds.json  annotation_video_audio_5_seconds.rttm  create_reference_files.py  face_features_video_audio_5_seconds.json  faces_multi_5_frames.json  faces_multi_labeled_5_frames.json  faces_single_5_frames.json  faces_single_labeled_5_frames.json  features_eng_5_seconds.json  features_video_multi_5_frames.json  reference_audio.rttm  reference_audio_5_seconds.json  reference_audio_5_seconds.rttm  reference_dutch_5_seconds.json  reference_eng_5_seconds.json  reference_text_dutch_5_seconds.json  sentiment_video_audio_5_seconds.json  test_video_audio_5_seconds_audio_annotation.json  test_video_audio_5_seconds_audio_annotation.rttm  test_video_audio_5_seconds_sentiment.json  test_video_audio_5_seconds_transcription.json  test_video_audio_5_seconds_transcription.srt  test_video_audio_5_seconds_video_annotation.json  test_video_audio_5_seconds_voice_features.json  text_audio_integration.json  transcription_dutch_5_seconds.json  transcription_dutch_5_seconds.txt  transcription_eng_1_second.json  transcription_eng_5_seconds.json  transcription_eng_5_seconds.txt  transcription_video_audio_5_seconds.srt
tests/text/: test_audio_text_integration.py  test_audio_transcription.py  test_sentiment.py
tests/video/: test_extraction.py  test_video_extraction.py
