# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Malte Luken
author_email = m.luken@esciencecenter.nl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Emotion expression capture from multiple modalities.
keywords =
    emotion
    multimodal
    expression
long_description = file: README.md
long_description_content_type = text/markdown
name = mexca
project_urls =
    Bug Tracker = https://github.com/mexca/mexca/issues
url = https://github.com/mexca/mexca
version = 0.2.1

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7,<3.10
install_requires =
    docker==6.0.1
    intervaltree==3.1.0
    moviepy>=1.0.3
    numpy==1.21.6
    pandas==1.3
    srt==3.5.2
    tqdm>=4.64.0

[options.entry_points]
console_scripts =
  extract-faces = mexca.video:cli
  identify-speakers = mexca.audio.identification:cli
  extract-voice = mexca.audio.extraction:cli
  transcribe = mexca.text.transcription:cli
  extract-sentiment = mexca.text.sentiment:cli

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
vid =
    facenet-pytorch==2.5.2
    py-feat==0.5.0
    spectralcluster==0.2.5
    torch==1.12.0
    torchvision==0.13.0
spe =
    pyannote.audio==2.1.1
    pyannote.core>=4.4,<5.0
    torch==1.12.0
voi =
    praat-parselmouth==0.4.1
tra =
    openai-whisper
    stable-ts
    torch==1.12.0
sen =
    protobuf==3.20
    scipy==1.7.3
    sentencepiece
    torch==1.12.0
    transformers==4.19.2
demo =
    ipywidgets
    pyyaml
dev =
    bump2version
    coverage[toml]
    prospector[with_pyroma]==1.7.7
    pylint==2.15.6
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = mexca, mexca.*

[isort]
lines_after_imports = 2
force_single_line = 0
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = mexca
src_paths = mexca,tests
line_length = 120
