# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Malte Luken
author_email = m.luken@esciencecenter.nl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Emotion expression capture from multiple modalities.
keywords =
    emotion
    multimodal
    expression
long_description = file: README.md
long_description_content_type = text/markdown
name = mexca
project_urls =
    Bug Tracker = https://github.com/mexca/mexca/issues
url = https://github.com/mexca/mexca
version = 1.0.1

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >3.7,<3.11
install_requires =
    docker>=6.0.1
    intervaltree>=3.1.0
    moviepy>=1.0.3
    numpy>=1.21,<1.24
    polars==0.19.8
    pydantic==2.4.2
    pyyaml>=6.0
    scipy>=1.7.3
    srt>=3.5.2
    tqdm>=4.64.0

[options.entry_points]
console_scripts =
  extract-faces = mexca.video.extraction:cli
  identify-speakers = mexca.audio.identification:cli
  extract-voice = mexca.audio.extraction:cli
  transcribe = mexca.text.transcription:cli
  extract-sentiment = mexca.text.sentiment:cli

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
vid =
    facenet-pytorch==2.5.2
    gdown==4.6.0
    av==10.0
    scikit-learn==1.3.1
    spectralcluster==0.2.16
    torch>=2.0
spe =
    pyannote.audio==3.1.1
    pyannote.core>=5.0
    torch>=2.0
voi =
    emvoice
    librosa<0.10.0
tra =
    openai-whisper
    torch>=2.0
    transformers==4.25.1
sen =
    accelerate==0.18.0
    bitsandbytes==0.38.1
    protobuf==3.20
    sentencepiece
    torch>=2.0
    transformers==4.25.1
all = mexca[vid,spe,voi,tra,sen]
demo =
    ipywidgets
    notebook
dev =
    black
    bump2version
    prospector[with_pyroma]==1.7.7
    pre-commit
    pylint==2.15.6
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = mexca, mexca.*

[isort]
profile = black
known_first_party = mexca
src_paths = mexca,tests
line_length = 80
multi_line_output = 3
